@@ -1,7 +1,8 @@
 v0.4.6
 fix : fast compression mode on Windows
 Improved : high compression mode on repetitive data
-Added : ZSTD_duplicateCCtx()
+New : block-level API
+New : ZSTD_duplicateCCtx()
 
 v0.4.5
 new : -m/--multiple : compress/decompress multiple files
